[package]
name = "adafruit-neotrellis"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
# # when trying unpushed stuff use
# adafruit-seesaw = { path = "../adafruit-seesaw" }

[dependencies.adafruit-seesaw]
git = "https://github.com/ferrous-systems/adafruit-seesaw"
branch = "try_shared_bus_crate"
adafruit-seesaw = { path = "../adafruit-seesaw" }